# c_code_utils

./: Readme.md
log_utils/: CMakeLists.txt  Readme.md
log_utils/cmake/: log_utilsConfig.cmake.in
log_utils/demo/: log_utils_demo.c
log_utils/inc/: log_utils.h
log_utils/src/: log_utils.c
logger/: .gitattributes  CMakeLists.txt
logger/cmake/: loggerConfig.cmake.in
logger/demo/: logger_demo.c
logger/inc/: logger.h
logger/src/: logger.c
mo_parser/: CMakeLists.txt  Readme.md
mo_parser/cmake/: mo_parserConfig.cmake.in
mo_parser/data/: ja_JP.mo  ja_JP.po  zh_CN.mo  zh_CN.po
mo_parser/demo/: search_comparison.c  test_mo.c
mo_parser/inc/: i18n_utils.h  mo_parser.h
mo_parser/src/: mo_parser.c
thread/: CMakeLists.txt
thread/inc/log/: misc_log.h
thread/inc/thread/: thread.h
thread/src/log/: misc_log.cpp
thread/src/thread/: thread.cpp
thread/test/: test_thread.cpp
unicode/: CMakeLists.txt
unicode/cmake/: unicodeConfig.cmake.in
unicode/demo/: unicode_utils_demo.c
unicode/inc/: unicode_utils.h  version.h.in
unicode/src/: unicode_utils.c
